--- a/main.html
+++ b/main.html
@@ -1,27 +1,53 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Flexbox Wrap Illustration</title>
+<style>
+  /* Holder class setup as flex container with wrapping */
+  .holder {
+    display: flex;
+    flex-wrap: wrap; /* allow items to wrap to next line if needed */
+    justify-content: space-between; /* space between items with first and last touching edges */
+    width: 100vw; /* full viewport width to demonstrate edge-to-edge */
+    box-sizing: border-box;
+  }
+
+  /* Item styling */
+  .item {
+    flex: 0 0 100px; /* fixed width so items don’t squash */
+    height: 100px;
+    font-size: 48px;
+    font-weight: bold;
+    padding: 10px;
+    box-sizing: border-box;
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+  }
+
+  /* Colored items as in the image */
+  .red {
+    background-color: red;
+  }
+  .blue {
+    background-color: blue;
+  }
+  .green {
+    background-color: green;
+  }
+</style>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-	
-  <div class="holder">
-	  
-	<div class="item" style="background-color: forestgreen;">3</div>
-	<div class="item" style="background-color: forestgreen;">4</div>
-    <div class="item" style="background-color: forestgreen;">5</div>
-    <div class="item" style="background-color: forestgreen;">6</div>
-    <div class="item" style="background-color: forestgreen;">7</div>
-    <div class="item" style="background-color: red;">1</div>
-    <div class="item" style="background-color: blue;">2</div>
-  </div>
-    <script type="text/javascript" src="./script.js">
-</script>
-
+<div class="holder">
+  <div class="item green">3</div>
+  <div class="item green">4</div>
+  <div class="item green">5</div>
+  <div class="item green">6</div>
+  <div class="item green">7</div>
+  <div class="item red">1</div>
+  <div class="item blue">2</div>
+</div>
 </body>
-
 </html>
